--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -22,6 +22,6 @@ jobs:
         pip install -r requirements.txt
         python -m pip install pytest
     - name: Run tests
-      run: python -m pytest tests/
+      run: python -m pytest
     - name: Build Docker image
       run: docker build -t mental-health-predictor .
