--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -21,7 +21,7 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt
         python -m pip install pytest
-    - name: Run tests
+    - name: Run test
       run: python -m pytest
     - name: Build Docker image
       run: docker build -t mental-health-predictor .
