--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -20,8 +20,9 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-        python -m pip install pytest
-    - name: Run test
-      run: python -m pytest
+        pip install pytest
+    - name: Run tests
+      run: |
+        python -m pytest
     - name: Build Docker image
       run: docker build -t mental-health-predictor .
