--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -20,9 +20,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-        pip install pytest
     - name: Run tests
-      run: |
-        python -m pytest
+      run: python -m pytest
     - name: Build Docker image
       run: docker build -t mental-health-predictor .
