--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,14 @@
-
-Flask==2.3.3
-pandas==2.0.3
-numpy==1.24.3
-scikit-learn==1.3.0
-xgboost==1.7.6
-joblib==1.3.2
-textblob==0.17.1
-nltk==3.8.1
-matplotlib==3.7.2
-seaborn==0.12.2
-plotly==5.15.0
+Flask==3.1.0
+Flask-SQLAlchemy==3.1.1
+pandas==2.2.3
+numpy==2.1.3
+scikit-learn==1.5.2
+xgboost==3.0.0
+joblib==1.4.2
 gunicorn==21.2.0
-Flask-SQLAlchemy==3.0.5
-Flask-Limiter==3.5.0
+Werkzeug==3.1.3
+Jinja2==3.1.4
+MarkupSafe==3.0.2
+itsdangerous==2.2.0
+click==8.1.8
+blinker==1.9.0
